src/tests/fixtures/comments/detachedBlockCommentWithoutStar.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
   @gqlType
*/
/**
 * Foo
 */

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/detachedBlockCommentWithoutStar.invalid.ts:2:4 - error: Unexpected Grats tag in detached docblock. Grats was unable to determine which TypeScript declaration this docblock is associated with. Moving the docblock to a position with is unambiguously "above" the relevant declaration may help. For more information see: https://grats.capt.dev/docs/faq/comment-syntax

2    @gqlType
     ~~~~~~~~
